Updated introduction - clarified the recent work header - added skills to projects

--- a/src/hbs/partials/content/introduction.hbs
+++ b/src/hbs/partials/content/introduction.hbs
@@ -1,3 +1,9 @@
 <div class="introduction">
-  <p>Hi. I’m Rich, a freelance web developer with nearly two decades experience. My primary focus is on front end web development and responsive web design, generally of content based web sites, and on projects ranging in size from a single page to serving content created by thousands of users.</p>
+  <p>Hi. I’m Rich. I’m an experienced web developer with a proven career history working directly for large organisations such as the BBC, Starling Bank and Time Inc., and on projects both large and small for numerous digital agencies.</p> 
+  
+  <p>I possess a wide understanding of web development in numerous technologies, environments, frameworks and content management systems.</p>
+  
+  <p>My current focus is on the intersection between Wordpress and React, both within the Gutenberg block-based editor and developing Wordpress Multisite as a backend for React front ends.</p>
+    
+  <p>Prior to working as a developer I was an SEO consultant and have carried that experience onwards through my career.</p> 
 </div>
