--- a/src/hbs/partials/content/section-career.hbs
+++ b/src/hbs/partials/content/section-career.hbs
@@ -1,7 +1,8 @@
 <section class="section section-career">
   <header class="section-header">
     <h2>Recent work</h2>
-    <p>Here’s what I’ve been doing over the last three years or so. My full career history is available on <a rel="external" href="https://www.linkedin.com/in/richard-cookson-219377b8">LinkedIn</a>.</p>
+    <p>Here’s what I’ve been doing over the past few years. I've highlighted interesting skills I picked up for certain projects but assume the usual core skills such as HTML, CSS, JavaScript and Git are used throughout.</p>
+    <p>For my earlier career history, you can check my <a rel="external" href="https://www.linkedin.com/in/richard-cookson-219377b8">LinkedIn</a> profile.</p>
   </header>
 
   <div class="section-content">
@@ -25,6 +26,12 @@
           <li>Carried out demonstrations of progress of the app to internal team at Hugo & Cat as well as to stakeholders at the client company thorough sprints.</li>
         </ul>
       </div>
+      
+      <ul class="group-horizontal">
+        <li class="tag"><a class="link" rel="external" href="https://reactjs.org">React</a></li>
+        <li class="tag"><a class="link" rel="external" href="https://storybook.js.org">Storybook</a></li>
+        <li class="tag"><a class="link" rel="external" href="https://styled-components.com">Styled Components</a></li>
+      </ul>
     </article>
     
     <article class="article article-work">
@@ -48,6 +55,14 @@
           <li>Worked directly with a range of project managers at Tilt and with the stakeholders at the end client.</li>
         </ul>
       </div>
+      
+      <ul class="group-horizontal">
+        <li class="tag"><a class="link" rel="external" href="https://gohugo.io">Hugo</a></li>
+        <li class="tag"><a class="link" rel="external" href="https://pkg.go.dev/text/template">Go Templates</a></li>
+        <li class="tag"><a class="link" rel="external" href="http://getbootstrap.com">Bootstrap</a></li>
+        <li class="tag"><a class="link" rel="external" href="https://www.microsoft.com/en-us/microsoft-365/sharepoint/collaboration">SharePoint</a></li>
+        <li class="tag"><a class="link" rel="external" href="https://learn.microsoft.com/en-us/powershell">PowerShell</a></li>
+      </ul>
     </article>
     
     <article class="article article-work">
@@ -68,6 +83,11 @@
           <li>Implemented client changes in the Fractal based style-guide, focused mainly around a complex vanilla JavaScript filtering component, and including adding functionality to support multiple languages.</li>
         </ul>
       </div>
+      
+      <ul class="group-horizontal">
+        <li class="tag"><a class="link" rel="external" href="https://wordpress.org">Wordpress</a></li>
+        <li class="tag"><a class="link" rel="external" href="https://fractal.build">Fractal</a></li>
+      </ul>
     </article>
     
     <article class="article article-work">
@@ -86,10 +106,14 @@
         <ul class="list">
           <li>Set up SpeedCurve and configured scripts to analyse different views within the application to allow performance to be monitored constantly.</li>
           <li>Carried out basic image and webfont optimisation strategies saving approximately 40% in static asset size pre-caching.</li>
-          <li>Created a code splitting script, which separated pre-authentication and post-authentication CSS. This allowed the creation of a prototype loading a mininal CSS payload for user registration and login views, reducing the initial pre-cached CSS payload from 3.2MB to 420kB.</li>
+          <li>Created a code splitting script, which separated pre-authentication and post-authentication CSS. This allowed the creation of a prototype loading a minimal CSS payload for user registration and login views, reducing the initial pre-cached CSS payload from 3.2MB to 420kB.</li>
           <li>Investigated and recommended techniques to preload JavaScript and the remaining application CSS in the background using dns-prefetch and preconnects among other techniques.</li>
         </ul>
       </div>
+      
+      <ul class="group-horizontal">
+        <li class="tag"><a class="link" rel="external" href="https://www.speedcurve.com">SpeedCurve</a></li>
+      </ul>
     </article>
     
     <article class="article article-work">
@@ -111,6 +135,11 @@
           <li>Connected the site to the clients internal communications tool allowing tight integration of the contact form and live chat to their workflow.</li>
         </ul>
       </div>
+      
+      <ul class="group-horizontal">
+        <li class="tag"><a class="link" rel="external" href="https://wordpress.org">Wordpress</a></li>
+        <li class="tag"><a class="link" rel="external" href="https://www.advancedcustomfields.com">Advanced Custom Fields</a></li>
+      </ul>
     </article>
     
     <article class="article article-work">
@@ -133,6 +162,12 @@
           <li>Set up and documented local development environment</li>
         </ul>
       </div>
+      
+      <ul class="group-horizontal">
+        <li class="tag"><a class="link" rel="external" href="https://wordpress.org">Wordpress</a></li>
+        <li class="tag"><a class="link" rel="external" href="https://www.advancedcustomfields.com">Advanced Custom Fields</a></li>
+        <li class="tag"><a class="link" rel="external" href="http://getbootstrap.com">Bootstrap</a></li>
+      </ul>
     </article>
 
     <article class="article article-work">
@@ -153,6 +188,10 @@
           <li>Utilised Docker to mock up original server infrastructure used by the store locator application so modifications could be made.</li>
         </ul>
       </div>
+      
+      <ul class="group-horizontal">
+        <li class="tag"><a class="link" rel="external" href="https://www.docker.com">Docker</a></li>
+      </ul>
     </article>
 
     <article class="article article-work">
@@ -170,10 +209,15 @@
         <p>Took over development of numerous content microsite builds for <a rel="external" href="https://www.samsungbackstage.co.uk">Samsung Backstage</a>, a portal for sales staff to learn about Samsung's range of mobile devices.</p>
         <ul class="list">
           <li>Audited existing microsite code which was based on Node, Gulp and Bootstrap</li>
-          <li>Improved tooling and framework for microsites to improve reusability and optimise page performance</li>
+          <li>Improved tooling and framework for micro-sites to improve reusability and optimise page performance</li>
           <li>Supported lead front end developer and Moodle developers on the redesign of Samsung Backstage</li>
         </ul>
       </div>
+      
+      <ul class="group-horizontal">
+        <li class="tag"><a class="link" rel="external" href="http://getbootstrap.com">Bootstrap</a></li>
+        <li class="tag"><a class="link" rel="external" href="https://moodle.org">Moodle</a></li>
+      </ul>
     </article>
 
     <article class="article article-work">
@@ -195,6 +239,12 @@
           <li>Worked closely with CMS developers to integrate produced templates</li>
         </ul>
       </div>
+      
+      <ul class="group-horizontal">
+        <li class="tag"><a class="link" rel="external" href="http://getbootstrap.com">Bootstrap</a></li>
+        <li class="tag"><a class="link" rel="external" href="https://www.docker.com">Docker</a></li>
+        <li class="tag"><a class="link" rel="external" href="https://gulpjs.com">Gulp</a></li>
+      </ul>
     </article>
 
     <article class="article article-work">
@@ -211,10 +261,16 @@
       <div class="article-content">
         <p>Responsible for development of a Vue.js based learning application based on Lumesse internal framework.</p>
         <ul class="list">
-          <li>Developed a <a rel="external" href="https://vuejs.org">Vue.js</a> web app based on designs, coding custom components and integrating existing ones.</li>
+          <li>Set up a <a rel="external" href="https://vuejs.org">Vue.js</a> web app based on an internal framework, coding custom components and integrating existing ones.</li>
+          <li>Constructed a complex single page scrolling animaton using GreenSock.</li>
           <li>Fixed bugs and made content adjustments to several other applications.</li>
         </ul>
       </div>
+      
+      <ul class="group-horizontal">
+        <li class="tag"><a class="link" rel="external" href="https://vuejs.org">Vue.js</a></li>
+        <li class="tag"><a class="link" rel="external" href="https://greensock.com">GreenSock</a></li>
+      </ul>
     </article>
 
     <article class="article article-work">
@@ -237,6 +293,14 @@
           <li>Reverse engineered existing web applications, fixing bugs and creating technical documentation for them.</li>
         </ul>
       </div>
+      
+      <ul class="group-horizontal">
+        <li class="tag"><a class="link" rel="external" href="https://wordpress.org">Wordpress</a></li>
+        <li class="tag"><a class="link" rel="external" href="https://www.advancedcustomfields.com">Advanced Custom Fields</a></li>
+        <li class="tag"><a class="link" rel="external" href="https://reactjs.org">React</a></li>
+        <li class="tag"><a class="link" rel="external" href="https://expressjs.com">Express</a></li>
+        <li class="tag"><a class="link" rel="external" href="https://webpack.js.org">Webpack</a></li>
+      </ul>
     </article>
 
     <article class="article article-work">
@@ -258,6 +322,11 @@
           <li>Implemented changes and fixes to the Discourse community site</li>
         </ul>
       </div>
+      
+      <ul class="group-horizontal">
+        <li class="tag"><a class="link" rel="external" href="https://wordpress.org">Wordpress</a></li>
+        <li class="tag"><a class="link" rel="external" href="https://www.advancedcustomfields.com">Advanced Custom Fields</a></li>
+      </ul>
     </article>
 
     <article class="article article-work">
@@ -278,6 +347,11 @@
           <li>Partnered with a designer to implement the company rebrand on the intranet, and their blog <a rel="external" href="http://www.pegasuspulse.com">Pegasus Pulse</a> - improved the layout and responsive code.</li>
         </ul>
       </div>
+      
+      <ul class="group-horizontal">
+        <li class="tag"><a class="link" rel="external" href="https://wordpress.org">Wordpress</a></li>
+        <li class="tag"><a class="link" rel="external" href="https://www.advancedcustomfields.com">Advanced Custom Fields</a></li>
+      </ul>
     </article>
 
     <article class="article article-work">
@@ -300,6 +374,11 @@
           <li>Worked closely with other developers on these projects to ensure work was carried out efficiently and to deadline.</li>
         </ul>
       </div>
+      
+      <ul class="group-horizontal">
+        <li class="tag"><a class="link" rel="external" href="https://wordpress.org">Wordpress</a></li>
+        <li class="tag"><a class="link" rel="external" href="https://www.advancedcustomfields.com">Advanced Custom Fields</a></li>
+      </ul>
     </article>
 
     <article class="article article-work">
@@ -314,12 +393,18 @@
       </header>
 
       <div class="article-content">
-        <p>Working on Futurebrand’s style-guide application, based on Craft CMS.</p>
+        <p>Working on Futurebrand’s style guide application, based on Craft CMS.</p>
         <ul class="list">
-          <li>Created responisve layouts for new sections of the application from Sketch designs in Zeplin.</li>
-          <li>Templatised responisve layouts in Twig.</li>
+          <li>Created responsive layouts for new sections of the application from Sketch designs in Zeplin.</li>
+          <li>Templatised responsive layouts in Twig.</li>
         </ul>
       </div>
+      
+      <ul class="group-horizontal">
+        <li class="tag"><a class="link" rel="external" href="https://craftcms.com">Craft CMS</a></li>
+        <li class="tag"><a class="link" rel="external" href="https://twig.symfony.com">Twig</a></li>
+        <li class="tag"><a class="link" rel="external" href="https://www.sketch.com">Sketch</a></li>
+      </ul>
     </article>
 
     <article class="article article-work">
@@ -341,6 +426,10 @@
           <li>Upgraded the site core to the latest version of Foundation 6 to take advantage of new responsive components.</li>
         </ul>
       </div>
+      
+      <ul class="group-horizontal">
+        <li class="tag"><a class="link" rel="external" href="http://foundation.zurb.com">Foundation</a></li>
+      </ul>
     </article>
 
     <article class="article article-work">
@@ -362,6 +451,12 @@
           <li>Implemented new brands and reworked some Twig templates to allow custom features.</li>
         </ul>
       </div>
+      
+      <ul class="group-horizontal">
+        <li class="tag"><a class="link" rel="external" href="https://craftcms.com">Craft CMS</a></li>
+        <li class="tag"><a class="link" rel="external" href="https://twig.symfony.com">Twig</a></li>
+        <li class="tag"><a class="link" rel="external" href="https://www.sketch.com">Sketch</a></li>
+      </ul>
     </article>
 
     <article class="article article-work">
@@ -383,6 +478,12 @@
           <li>Re-organised deployment of components and style-guide using Springloops and management of the project Git repository.</li>
         </ul>
       </div>
+      
+      <ul class="group-horizontal">
+        <li class="tag"><a class="link" rel="external" href="http://getbootstrap.com">Bootstrap</a></li>
+        <li class="tag"><a class="link" rel="external" href="https://springloops.io">SpringLoops</a></li>
+        <li class="tag"><a class="link" rel="external" href="https://www.sketch.com">Sketch</a></li>
+      </ul>
     </article>
 
     <article class="article article-work">
@@ -404,6 +505,10 @@
           <li>Implemented new designs based on a responsive, mobile first perspective.</li>
         </ul>
       </div>
+      
+      <ul class="group-horizontal">
+        <li class="tag"><a class="link" rel="external" href="http://foundation.zurb.com">Foundation</a></li>
+      </ul>
     </article>
 
     <article class="article article-work">
@@ -420,46 +525,10 @@
       <div class="article-content">
         <p>Created a complex animation to show the purpose of a publishing application utilising Greensock JavaScript animation library.</p>
       </div>
-    </article>
-
-    <article class="article article-work">
-      <header class="article-header">
-        <h3 class="article-heading">Home page redesign and dev-ops consultation for DeWynters</h3>
-        <div class="article-metadata">
-          <a rel="external" href="http://www.dewynters.com">www.dewynters.com</a>
-          <span class="duration">
-            <time datetime="05-2016">May 2016</time>
-          </span>
-        </div>
-      </header>
-
-      <div class="article-content">
-        <p>Covering for a lack of development staff internally, I worked on a redesign of the DeWynters home page and advised on new development systems to replace their aging Dreamweaver/Adobe workflow.</p>
-        <ul class="list">
-          <li>Advised on internal procedures for source code control using Git and build automation using Grunt.</li>
-          <li>Produced initial version of new responsive DeWynters home page and handed it over for testing and completion by internal team.</li>
-        </ul>
-      </div>
-    </article>
-
-    <article class="article article-work">
-      <header class="article-header">
-        <h3 class="article-heading">Client pitch microsite for Mediacom</h3>
-        <div class="article-metadata">
-          <a rel="external" href="http://www.mediacom.com">www.mediacom.com</a>
-          <span class="duration">
-            <time datetime="04-2016">April 2016</time>
-          </span>
-        </div>
-      </header>
-
-      <div class="article-content">
-        <p>Constructed responsive microsite, working closely with project managers and designer, to introduce Mediacoms client to the marketing team they proposed for a pitch.</p>
-        <ul class="list">
-          <li>Set up production server from scratch on Linode hosting platform, and sourced domain name for the site.</li>
-          <li>Implemented simple PHP access control.</li>
-        </ul>
-      </div>
+      
+      <ul class="group-horizontal">
+        <li class="tag"><a class="link" rel="external" href="https://greensock.com">GreenSock</a></li>
+      </ul>
     </article>
 
     <article class="article article-work">
@@ -468,7 +537,7 @@
         <div class="article-metadata">
           <a rel="external" href="http://www.wallpaper.com">www.wallpaper.com</a>
           <span class="duration">
-            <time datetime="01-2016">January</time> to <time datetime="03-2016">March 2016</time>
+            <time datetime="01-2016">January</time> to <time datetime="04-2016">March 2016</time>
           </span>
         </div>
       </header>
@@ -480,6 +549,11 @@
           <li>Utilised Jenkins and Git in a Continuous Integration environment for updating sites with fixes and enhancements.</li>
         </ul>
       </div>
+      
+      <ul class="group-horizontal">
+        <li class="tag"><a class="link" rel="external" href="https://www.vagrantup.com">Vagrant</a></li>
+        <li class="tag"><a class="link" rel="external" href="https://www.jenkins.io">Jenkins</a></li>
+      </ul>
     </article>
   </div>
 </section>
