--- a/src/scss/layouts/_all.scss
+++ b/src/scss/layouts/_all.scss
@@ -65,11 +65,15 @@
   @include respond-below(medium) {
     order: 1;
   }
-  
+
+  .section-header {
+    margin-bottom: 2rem;
+  }
+
   .article-work {
     @media print {
       display: none;
-    
+
       &:nth-child(-n+8) {
         display: block;
       }
@@ -78,6 +82,10 @@
 }
 
 .section-about {
+  @media print {
+    margin-top: 2rem;
+  }
+
   @include respond-below(medium) {
     order: 3;
   }
