--- a/src/scss/components/_tags.scss
+++ b/src/scss/components/_tags.scss
@@ -6,6 +6,7 @@
   margin: 0.25rem;
 
   a {
+    background-color: set-color(skill, advanced);
     color: set-color(neutral, white);
     display: block;
     min-width: 5rem;
@@ -13,8 +14,13 @@
     text-align: center;
     text-decoration: none;
 
+    &:visited {
+      background-color: darken(set-color(skill, advanced), 10%);
+    }
+
     @media print {
       padding: 0.25rem 0.5rem;
     }
   }
 }
+ 
