Fixed some grammatical errors

--- a/src/hbs/partials/content/section-career.hbs
+++ b/src/hbs/partials/content/section-career.hbs
@@ -20,10 +20,10 @@
       <div class="article-content">
         <p>Front end developer on a project to create a dashboard app, displaying a number of charts and statistics monitoring roll-out and communication of devices for a telecommunications company.</p>
         <ul class="list">
-          <li>Developed the front of the of the React app in StoryBook for rapid development while the backend was being worked on.</li>
-          <li>Connected application to backend using React Query.</li>
-          <li>Created a number of charts based on customised Victory Charts components, and bespoke charts as SVG React components.</li>
-          <li>Carried out demonstrations of progress of the app to internal team at Hugo & Cat as well as to stakeholders at the client company thorough sprints.</li>
+          <li>Developed the React app in StoryBook for rapid development while the back-end was being worked on.</li>
+          <li>Used React Query to consume the multiple API's required by the app.</li>
+          <li>Created a number of charts based on customised Victory Charts components, and also bespoke charts as SVG components.</li>
+          <li>Carried out demonstrations of progress to internal team at Hugo & Cat as well as to stakeholders at the client company thorough sprints.</li>
         </ul>
       </div>
       
@@ -46,11 +46,11 @@
       </header>
     
       <div class="article-content">
-        <p>In charge of the management and development of a Sharepoint rapid site development framework based on <a rel="external" href="https://gohugo.io/">Hugo static site generator</a>, JavaScript, PowerShell scripts and Sharepoint API, for a multinational pharmaceutical corporation.</p>
+        <p>In charge of the management and ongoing development of a Sharepoint site creation framework based on <a rel="external" href="https://gohugo.io/">Hugo</a> static site generator, JavaScript, PowerShell scripts and the Sharepoint API, for a multinational pharmaceutical corporation.</p>
         <ul class="list">
           <li>Managed development on improvements to the initial framework to improve structure and usability of the scripts and code.</li>
-          <li>Produced components in JavaScript and Hugo Shortcodes to allow rich features such as Search, User Challenges, Quiz's, Carousels and other custom functionality.</li>
-          <li>Moved development from an old jQuery stack to using modular ES6 vanilla JavaScript once IE 11 support was dropped.</li>
+          <li>Produced components in to allow rich features such as site search, user challenges, quizzes and other custom functionality.</li>
+          <li>Moved development from an old jQuery stack to modular ES6 vanilla JavaScript once IE 11 support was dropped.</li>
           <li>Developed and wrote rich documentation for all features and components utilising the framework itself.</li>
           <li>Worked directly with a range of project managers at Tilt and with the stakeholders at the end client.</li>
         </ul>
@@ -77,7 +77,7 @@
       </header>
     
       <div class="article-content">
-        <p>Worked on two projects. One to finish up a set of sites for a global PR agency, and another to implement client feedback on a style-guide for an entertainment corporation.</p>
+        <p>Worked on two projects. One to finish up a set of sites for a global PR agency, and another to implement client feedback on a style guide for an entertainment corporation.</p>
         <ul class="list">
           <li>Carried out general bug fixes and improvements on a Wordpress Multisite set up in final stages of the project.</li>
           <li>Implemented client changes in the Fractal based style-guide, focused mainly around a complex vanilla JavaScript filtering component, and including adding functionality to support multiple languages.</li>
