--- a/app/_scss/abstracts/maps/_breakpoints.scss
+++ b/app/_scss/abstracts/maps/_breakpoints.scss
@@ -1,8 +1,8 @@
 $breakpoints: (
 	xs: 0,
-  sm: 576px,
-  md: 768px,
-  lg: 992px,
-  xl: 1200px,
-  xxl: 1400px
+  sm: rem(576),
+  md: rem(768),
+  lg: rem(992),
+  xl: rem(1200),
+  xxl: rem(1400)
 );
