Added Grid SCSS

--- a/app/_scss/styles.global.scss
+++ b/app/_scss/styles.global.scss
@@ -12,3 +12,8 @@
 @import 'abstracts/mixins/gridGutter';
 @import 'abstracts/mixins/gridPadding';
 @import 'abstracts/mixins/gridMaxWidth';
+
+// Classes
+
+@import 'classes/grid';
+@import 'classes/gridItem';
