Added test code for Skill component styles

--- a/app/_components/skill/skill.module.scss
+++ b/app/_components/skill/skill.module.scss
@@ -1,3 +1,7 @@
+//
+// Skill
+// -----------------------------------------------------------------------------
+
 .skill {
   background-color: setColor(primary, cyan);
 }
