--- a/app/_scss/abstracts/maps/_colors.scss
+++ b/app/_scss/abstracts/maps/_colors.scss
@@ -12,6 +12,7 @@ $palettes: (
     black: rgb(0, 0, 0),
   ),
 	primary: (
+		blue: rgb(25, 118, 210),
 		cyan: rgb(0, 159, 218),
 	),
 	secondary: (
