--- a/app/_components/skill/skill.module.scss
+++ b/app/_components/skill/skill.module.scss
@@ -9,8 +9,9 @@
 		background-color: setColor(primary, cyan);
 		color: setColor(neutral, white);
 		display: inline-block;
+		font-size: rem(20);
 		min-width: rem(80);
-		padding: rem(8);
+		padding: rem(12);
 		text-align: center;
 		text-decoration: none;
 	}
