--- a/app/_components/skill/skill.module.scss
+++ b/app/_components/skill/skill.module.scss
@@ -17,6 +17,6 @@
 	}
   
 	&:visited {
-		background-color: darken(setColor(primary, cyan), 10%);
+		background-color: darken(setColor(primary, blue), 10%);
 	}
 }
