Fixed accessibility issue

--- a/app/_components/skill/skill.module.scss
+++ b/app/_components/skill/skill.module.scss
@@ -6,7 +6,7 @@
 	margin: rem(8);
 	
 	a {
-		background-color: setColor(primary, cyan);
+		background-color: setColor(primary, blue);
 		color: setColor(neutral, white);
 		display: inline-block;
 		font-size: rem(20);
