--- a/app/_components/button/button.module.scss
+++ b/app/_components/button/button.module.scss
@@ -9,7 +9,9 @@
 	color: setColor(neutral, white);
 	display: inline-flex;
 	font-size: rem(20);
+	font-weight: 300;
 	line-height: 1;
+	justify-content: center;
 	margin: rem(8);
 	min-width: rem(80);
 	padding: rem(12);
