Changed avatar to monochrome to preserve wireframe feel

--- a/app/_components/header/header.module.scss
+++ b/app/_components/header/header.module.scss
@@ -12,6 +12,7 @@
     background-repeat: no-repeat;
     content: '';
     display: block;
+		filter: grayscale(100%);
     height: rem(80);
     width: rem(80);
 
