Added comment header

--- a/app/_components/group/group.module.scss
+++ b/app/_components/group/group.module.scss
@@ -1,3 +1,7 @@
+//
+// Group
+// -----------------------------------------------------------------------------
+
 .group {
 	display: flex;
 	flex-wrap: wrap;
