Added global styles

--- a/app/_scss/styles.global.scss
+++ b/app/_scss/styles.global.scss
@@ -12,13 +12,13 @@
 @import 'abstracts/mixins/gridGutter';
 @import 'abstracts/mixins/gridPadding';
 @import 'abstracts/mixins/gridMaxWidth';
+@import 'abstracts/mixins/groupHorizontal';
+@import 'abstracts/mixins/heading';
+@import 'abstracts/mixins/hyperlink';
+@import 'abstracts/mixins/list';
+@import 'abstracts/mixins/paragraph';
 
 // Classes
 
 @import 'classes/grid';
 @import 'classes/gridItem';
-
-// Base
-
-@import 'base/headings';
-@import 'base/hyperlinks';
