Adjusted CareerArticle - updated page to work correctly

--- a/app/_components/career-article/career-article.module.scss
+++ b/app/_components/career-article/career-article.module.scss
@@ -16,8 +16,8 @@
 
 .title {
   @include heading();
-  font-size: 1.5rem;
-  margin-bottom: rem(4);
+  font-size: 2rem;
+  margin-bottom: rem(8);
 }
 
 .metadata {
@@ -41,7 +41,10 @@
 
 .content {
   p {
-    margin-bottom: rem(8);
+    color: setColor(neutral, gray-20);
+    font-size: rem(17);
+    line-height: 1.35;
+    margin: 0 0 rem(16);
   }
 
   ul {
