--- a/app/_scss/styles.global.scss
+++ b/app/_scss/styles.global.scss
@@ -1,24 +1,24 @@
 // Functions
-@import 'abstracts/functions/rem';
+@import "abstracts/functions/rem";
 
 // Variables
-@import 'abstracts/variables/grid';
+@import "abstracts/variables/grid";
 
 // Map dependent mixins
-@import 'abstracts/maps/breakpoints', 'abstracts/mixins/respondAbove', 'abstracts/mixins/respondBelow', 'abstracts/mixins/respondBetween';
-@import 'abstracts/maps/colors', 'abstracts/functions/setColor';
+@import "abstracts/maps/breakpoints", "abstracts/mixins/respondAbove",
+  "abstracts/mixins/respondBelow", "abstracts/mixins/respondBetween";
+@import "abstracts/maps/colors", "abstracts/functions/setColor";
 
 // Independent mixins
-@import 'abstracts/mixins/gridGutter';
-@import 'abstracts/mixins/gridPadding';
-@import 'abstracts/mixins/gridMaxWidth';
-@import 'abstracts/mixins/groupHorizontal';
-@import 'abstracts/mixins/heading';
-@import 'abstracts/mixins/hyperlink';
-@import 'abstracts/mixins/list';
-@import 'abstracts/mixins/paragraph';
+@import "abstracts/mixins/gridGutter";
+@import "abstracts/mixins/gridPadding";
+@import "abstracts/mixins/gridMaxWidth";
+@import "abstracts/mixins/groupHorizontal";
+@import "abstracts/mixins/heading";
+@import "abstracts/mixins/hyperlink";
+@import "abstracts/mixins/list";
 
 // Classes
 
-@import 'classes/grid';
-@import 'classes/gridItem';
+@import "classes/grid";
+@import "classes/gridItem";
