--- a/app/_components/skill/skill.module.scss
+++ b/app/_components/skill/skill.module.scss
@@ -3,7 +3,7 @@
 // -----------------------------------------------------------------------------
 
 .skill {
-	background-color: setColor(primary, blue);
+	background-color: setColor(neutral, gray-40);
 	color: setColor(neutral, white);
 	display: inline-block;
 	font-size: rem(17);
@@ -12,7 +12,9 @@
 	text-align: center;
 	text-decoration: none;
 
+	// [Todo] - We shouldn't use functions like darken as it introduces random colors
+	// Change this when we set up a final color palette 
 	&:visited {
-		background-color: darken(setColor(primary, blue), 10%);
+		background-color: darken(setColor(neutral, gray-40), 10%);
 	}
 }
