Adjusted CareerArticle to skills mapped into prop

--- a/app/_components/career-article/career-article.module.scss
+++ b/app/_components/career-article/career-article.module.scss
@@ -3,6 +3,9 @@
 // -----------------------------------------------------------------------------
 
 .article {
+  @extend .grid-item;
+  @extend .xs-12;
+  
   margin-bottom: rem(24);
 
   &:last-child {
