Set hyperlinks to be neutral colors for wireframing

--- a/app/_scss/abstracts/mixins/_hyperlink.scss
+++ b/app/_scss/abstracts/mixins/_hyperlink.scss
@@ -6,7 +6,8 @@
   text-decoration: none;
 
   &:link, &:visited {
-    color: setColor(primary, blue);
+    color: setColor(neutral, black);
+    text-decoration: underline;
   }
 
   &:active, &:focus, &:hover {
