Adjusted grid system - set Header to use grid

--- a/app/_components/career-article/career-article.module.scss
+++ b/app/_components/career-article/career-article.module.scss
@@ -4,8 +4,8 @@
 
 .article {
   @extend .grid-item;
-  @extend .xs-12;
-  @extend .md-offset-1;
+  @extend .xs-10;
+  @extend .xs-offset-2;
 
   margin-bottom: rem(24);
 
