--- a/app/_components/header/header.module.scss
+++ b/app/_components/header/header.module.scss
@@ -3,30 +3,20 @@
 // -----------------------------------------------------------------------------
 
 .header {
+  @include grid($padding: false);
   @extend .grid-item;
-  position: relative;
 
+  // Avatar
   &:before {
+    @extend .grid-item;
+    @extend .xs-2;
     background-image: url('/images/png/avatar.png');
-    background-position: top center;
+    background-position: top right;
     background-repeat: no-repeat;
     content: '';
     display: block;
 		filter: grayscale(100%);
     height: rem(80);
-    width: rem(80);
-
-    @include respond-above(md) {
-      background-position: top right;
-      left: 0;
-      position: absolute;
-    }
-
-    @include respond-below(md) {
-      margin-bottom: 1rem;
-      margin-left: auto;
-      margin-right: auto;
-    }
 
     @media print {
       display: none;
@@ -34,6 +24,9 @@
   }
 
   .h1 {
+    @extend .grid-item;
+    @extend .xs-10;
+
     border-bottom: rem(1) solid setColor(neutral, gray-85);
     color: setColor(neutral, gray-20);
     font-size: rem(48);
@@ -41,13 +34,6 @@
     letter-spacing: rem(-1);
     margin-bottom: rem(16);
     padding-bottom: rem(8);
-    text-align: center;
-
-    @include respond-above(md) {
-      font-size: rem(48);
-      margin-left: 6.5rem;
-      text-align: left;
-    }
 
     @media print {
       font-size: rem(32);
