--- a/app/_components/title/title.module.scss
+++ b/app/_components/title/title.module.scss
@@ -7,8 +7,14 @@
   padding-bottom: rem(8);
 }
 
+.h2 {
+  @include heading();
+  font-size: rem(32);
+  margin-bottom: rem(8);
+}
+
 .h3 {
   @include heading();
-  font-size: 2rem;
+  font-size: rem(28);
   margin-bottom: rem(8);
 }
