--- a/app/_components/title/title.module.scss
+++ b/app/_components/title/title.module.scss
@@ -1,9 +1,10 @@
 .h1 {
   color: setColor(neutral, gray-20);
-  font-size: rem(48);
+  font-size: rem(64);
   font-weight: 900;
   letter-spacing: rem(-1);
   margin-bottom: rem(16);
+  margin-top: 0;
   padding-bottom: rem(8);
 }
 
