--- a/app/_components/career-article/career-article.module.scss
+++ b/app/_components/career-article/career-article.module.scss
@@ -39,10 +39,7 @@
 
 .content {
   p {
-    color: setColor(neutral, gray-20);
-    font-size: rem(17);
-    line-height: 1.35;
-    margin: 0 0 rem(16);
+    @include paragraph();
   }
 
   ul {
