Updated Section component

--- a/app/_components/section/section.module.scss
+++ b/app/_components/section/section.module.scss
@@ -22,9 +22,6 @@
   }
 
   p {
-    color: setColor(neutral, gray-20);
-    font-size: rem(17);
-    line-height: 1.35;
-    margin: 0 0 rem(16);
+    @include paragraph();
   }
 }
