Reinclude paragraph as mixin

--- a/app/_scss/styles.global.scss
+++ b/app/_scss/styles.global.scss
@@ -14,6 +14,7 @@
 @import "abstracts/mixins/heading";
 @import "abstracts/mixins/hyperlink";
 @import "abstracts/mixins/list";
+@import "abstracts/mixins/paragraph";
 @import "abstracts/mixins/respondAbove";
 @import "abstracts/mixins/respondBelow";
 @import "abstracts/mixins/respondBetween";
