--- a/app/_scss/abstracts/variables/_grid.scss
+++ b/app/_scss/abstracts/variables/_grid.scss
@@ -2,7 +2,8 @@
 // Grid Variables
 // -----------------------------------------------------------------------------
 
-$grid-gutter: rem(16);
+$grid-h-gutter: rem(8);
+$grid-v-gutter: rem(8);
 $grid-h-padding: rem(32);
 $grid-v-padding: rem(32);
 $grid-max-width: rem(1280);
