--- a/app/_components/block/block.module.scss
+++ b/app/_components/block/block.module.scss
@@ -2,9 +2,8 @@
   @extend .grid-item;
   @extend .md-offset-2;
   @extend .md-10;
-  margin-bottom: 1.5rem;
 
-  @include respond-above(md) {
-    margin-bottom: 2rem;
+  :last-child {
+    margin-bottom: 0;
   }
 }
