--- a/app/_components/button/button.module.scss
+++ b/app/_components/button/button.module.scss
@@ -3,27 +3,27 @@
 // -----------------------------------------------------------------------------
 
 .button {
-	align-items: center;
-	background-color: setColor(neutral, gray-40);
-	border-radius: rem(8);
-	color: setColor(neutral, white);
-	display: inline-flex;
-	font-size: rem(20);
-	font-weight: 400;
-	line-height: 1;
-	justify-content: center;
-	min-width: rem(80);
-	padding: rem(12);
-	text-align: center;
-	text-decoration: none;
+  align-items: center;
+  background-color: setColor(neutral, gray-40);
+  border-radius: rem(8);
+  color: setColor(neutral, white);
+  display: inline-flex;
+  font-size: rem(17);
+  font-weight: 400;
+  line-height: 1;
+  justify-content: center;
+  min-width: rem(80);
+  padding: rem(12);
+  text-align: center;
+  text-decoration: none;
 
-	// [Todo] - We shouldn't use functions like darken as it introduces random colors
-	// Change this when we set up a final color palette 
-	&:hover {
-		background-color: darken(setColor(neutral, gray-20), 10%);
-	}
+  // [Todo] - We shouldn't use functions like darken as it introduces random colors
+  // Change this when we set up a final color palette
+  &:hover {
+    background-color: darken(setColor(neutral, gray-20), 10%);
+  }
 }
 
-.icon {
-	padding-right: rem(8);
+.text {
+  padding-left: rem(8);
 }
