--- a/app/_components/skill/skill.module.scss
+++ b/app/_components/skill/skill.module.scss
@@ -3,7 +3,7 @@
 // -----------------------------------------------------------------------------
 
 .skill {
-  background-color: setColor(neutral, gray-40);
+  background-color: setColor(primary, cyan);
   color: setColor(neutral, white);
   display: inline-block;
   font-size: rem(17);
@@ -15,6 +15,6 @@
   // [Todo] - We shouldn't use functions like darken as it introduces random colors
   // Change this when we set up a final color palette
   &:visited {
-    background-color: darken(setColor(neutral, gray-40), 10%);
+    background-color: setColor(primary, blue);
   }
 }
